--- a/surveys/customersurvey.html
+++ b/surveys/customersurvey.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Customer Survey:LGO</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     <form method="post" action="https://formspree.io/f/moqbwzbw">
@@ -15,7 +15,6 @@
                 <input type="radio" id="no1" name="no"><br>
                 <p>Thanks for completing our survey!</p>
                 <input type="submit" value="Submit">
-     </form>
-    
+    </form>
 </body>
 </html>
