--- a/surveys/customersurvey.html
+++ b/surveys/customersurvey.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form method="post" action="https://formspree.io/f/moqbwzbw">
-        <p>Are you in the process of deciding where you will live in your old age</p>
+        <p>Are you in the process of deciding where you will live in your old age?</p>
                 <label for="yes1">Yes</label>
                 <input type="radio" id="yes1" name="yes"><br>
                 <label for="no1">No</label>
